--- a/AvaloniaTodoApp/Views/TestWindow.axaml
+++ b/AvaloniaTodoApp/Views/TestWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="using:AvaloniaTodoAPp.ViewModels"
         xmlns:controls="clr-namespace:AvaloniaTodoAPp.Controls"
+        xmlns:dialogHostAvalonia="clr-namespace:DialogHostAvalonia;assembly=DialogHost.Avalonia"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
         x:Class="AvaloniaTodoApp.Views.TestWindow"
         x:DataType="vm:TestWindowViewModel"
@@ -13,15 +14,23 @@
         <vm:TestWindowViewModel />
     </Design.DataContext>
 
-    <StackPanel Background="{Binding Color}" Spacing="10">
-        <TextBox Text="{Binding Text}"></TextBox>
-        <Button Content="Convert" Command="{Binding ConvertCommand}"></Button>
-        <StackPanel Spacing="10" Background="{DynamicResource SystemRegionBrush}">
-            <controls:Avatar Username="Alex" />
-            <controls:AvatarList />
+    <dialogHostAvalonia:DialogHost
+        Identifier="CollectionsDialogHost"
+        DialogMargin="0"
+        dialogHostAvalonia:DialogHostStyle.CornerRadius="8"
+        DisableOpeningAnimation="True"
+        BlurBackground="False">
+        <StackPanel Background="{Binding Color}" Spacing="10">
+            <TextBox Text="{Binding Text}"></TextBox>
+            <Button Content="Convert" Command="{Binding ConvertCommand}"></Button>
+            <StackPanel Spacing="10" Background="{DynamicResource SystemRegionBrush}">
+                <controls:Avatar Username="Alex" />
+                <controls:AvatarList />
+            </StackPanel>
+            <StackPanel>
+                <Button Command="{Binding SelectCommand}">Load</Button>
+                <Button Command="{Binding InviteCommand}">Invite</Button>
+            </StackPanel>
         </StackPanel>
-        <StackPanel>
-            <Button Command="{Binding SelectCommand}">Action</Button>
-        </StackPanel>
-    </StackPanel>
+    </dialogHostAvalonia:DialogHost>
 </Window>
